feat: Removed list all planets route
