# api/swagger.yaml
@@ -574,36 +574,6 @@ paths:
       tags:
       - healthcheck
   /planets:
-    get:
-      description: Returns planets, optionally filtered by player id.
-      parameters:
-      - description: Player id (UUID)
-        in: query
-        name: player
-        schema:
-          type: string
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/rest.ResponseEnvelope-array_dtos_PlanetDtoResponse'
-          description: OK
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
-          description: Bad Request
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
-          description: Internal Server Error
-      summary: List planets
-      tags:
-      - planets
     post:
       description: Creates a planet from the provided payload.
       requestBody:
@@ -904,6 +874,39 @@ paths:
       summary: Get player
       tags:
       - players
+  /players/{id}/planets:
+    get:
+      description: Returns planets belonging to a player.
+      parameters:
+      - description: Player id (UUID)
+        in: path
+        name: id
+        required: true
+        schema:
+          format: uuid
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rest.ResponseEnvelope-array_dtos_PlanetDtoResponse'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
+          description: Internal Server Error
+      summary: List planets
+      tags:
+      - players
   /universes:
     get:
       description: Returns all universes.
@@ -1035,4 +1038,4 @@ paths:
       - universes
 servers:
 - description: Base path for the galactic-sovereign API
-  url: /v1
+  url: /v1/galactic-sovereign
